move editor preview controls to the bottom so they do not fall behind position fixed header

--- a/src/components/AnimationControls/AnimationControls.css
+++ b/src/components/AnimationControls/AnimationControls.css
@@ -347,7 +347,8 @@
 		position: absolute;
 		display: flex;
 		justify-content: flex-end;
-		top: 0;
+    top: unset;
+    bottom: 0;
 		right: 0;
 		left: unset;
     grid-template-columns: 1fr 1fr 1fr;
